--- a/earn/tg.html
+++ b/earn/tg.html
@@ -1,1 +1,2 @@
-https://earn.wildmoney.pro/?utm_source=tg&utm_medium=story&utm_campaign=storka_1
+
+<meta http-equiv="refresh" content="0; url=https://earn.wildmoney.pro/?utm_source=tg&utm_medium=story&utm_campaign=storka_1" />
